:bug: Fix weird text align

--- a/frontend/resources/styles/main/partials/texts.scss
+++ b/frontend/resources/styles/main/partials/texts.scss
@@ -16,7 +16,7 @@
 
 .text-editor {
   .DraftEditor-root {
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
   }
